original template upload 2nd time

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Replace the text below to customize your site
-site_name: Julia Steketee - MDEF & Fab Lab Barcelona
+site_name: Julia Steketee
 site_description: Master in Design for Emergent Futures
 site_author: Julia Steketee
 copyright: Copyleft 2021 "Julia Steketee" - GNU Free Documentation License
